--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: RelaxedMason – Data Analyst Portfolio
 description: BAFTA Scripted Comedy Awards Visualization
 theme: minima
 
-# tell Jekyll your project slug so "/assets/..." works
-baseurl: "/bafta-scripted-comedy-portfolio"
+url: "https://masoncolborn.com"
+baseurl: ""
 
 # _config.yml (append)
 defaults:
