--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # _config.yml
-title: Mason Colborn – Data Analyst Portfolio
-description: "BAFTA Scripted Comedy Awards: Winners & Nominees (2016–2025)"
+title: "Mason Colborn – Data Analyst Portfolio"
+description: "SQL • Python • APIs • Dashboarding"
 theme: minima
 
 url: "https://masoncolborn.com"
