--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Mason Colborn – Data Analyst Portfolio"
-description: "SQL • Python • APIs • Dashboarding"
+title: ""
+
 theme: minima
 
 url: "https://masoncolborn.com"
