--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,15 @@
+# _config.yml
 title: "Mason Colborn"
 theme: minima
 url: "https://masoncolborn.com"
-baseurl: ""
+baseurl: ""   # no trailing slash
 
 defaults:
   - scope:
-      path: ""            # all files
+      path: ""  # all files
     values:
+      # this injects a <link> into the <head> of your minima theme
       extra_head: "<link rel='stylesheet' href='{{ '/assets/css/custom.css' | relative_url }}' />"
+
 
 
