--- a/.github/workflows/update-raleigh-hr.yml
+++ b/.github/workflows/update-raleigh-hr.yml
@@ -1,14 +1,14 @@
 name: Update Cal Raleigh HR Data
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: "5 9 * * *"   # daily at 09:05 UTC
-  workflow_dispatch: {}
+    - cron: '5 9 * * *'
   push:
     paths:
-      - scripts/get_raleigh_hr.py
-      - .github/workflows/update-raleigh-hr.yml
-      - bafta-scripted-comedy-shows/requirements.txt
+      - 'scripts/get_raleigh_hr.py'
+      - '.github/workflows/update-raleigh-hr.yml'
+      - 'bafta-scripted-comedy-shows/requirements.txt'
 
 jobs:
   update:
@@ -20,25 +20,25 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
 
-      - name: Debug: list files
-        run: |
-          pwd
-          echo "=== repo root ==="
-          ls -la
-          echo "=== scripts ==="
-          ls -la scripts || true
-          echo "=== bafta-scripted-comedy-shows ==="
-          ls -la bafta-scripted-comedy-shows || true
-          echo "=== .github/workflows ==="
-          ls -la .github/workflows || true
+      # DEBUG (kept simple to avoid YAML pitfalls)
+      - name: Debug pwd
+        run: pwd
+      - name: Debug list root
+        run: ls -la
+      - name: Debug list scripts
+        run: ls -la scripts || true
+      - name: Debug list bafta-scripted-comedy-shows
+        run: ls -la bafta-scripted-comedy-shows || true
+      - name: Debug list workflows
+        run: ls -la .github/workflows || true
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install deps
-        run: pip install -r bafta-scripted-comedy-shows/requirements.txt
+        run: python -m pip install --upgrade pip && pip install -r bafta-scripted-comedy-shows/requirements.txt
 
       - name: Run fetch script
         run: python scripts/get_raleigh_hr.py
@@ -46,9 +46,7 @@ jobs:
       - name: Commit changes (if any)
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "chore(data): update Cal Raleigh HRs [auto]"
+          commit_message: 'chore(data): update Cal Raleigh HRs [auto]'
           file_pattern: |
             assets/data/raleigh_hr.json
             assets/data/raleigh_hr.csv
-
-
