--- a/.github/workflows/update-raleigh-hr.yml
+++ b/.github/workflows/update-raleigh-hr.yml
@@ -3,7 +3,7 @@ name: Update Cal Raleigh HR Data
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5 9 * * *'
+    - cron: '5 9 * * *'   # daily at 09:05 UTC
   push:
     paths:
       - 'scripts/get_raleigh_hr.py'
@@ -20,17 +20,14 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
 
-      # DEBUG (kept simple to avoid YAML pitfalls)
-      - name: Debug pwd
-        run: pwd
-      - name: Debug list root
-        run: ls -la
-      - name: Debug list scripts
-        run: ls -la scripts || true
-      - name: Debug list bafta-scripted-comedy-shows
-        run: ls -la bafta-scripted-comedy-shows || true
-      - name: Debug list workflows
-        run: ls -la .github/workflows || true
+      # quick visibility into what the runner sees
+      - name: Debug: show tree
+        run: |
+          echo "PWD=$(pwd)"
+          echo "=== root ==="; ls -la
+          echo "=== scripts ==="; ls -la scripts || true
+          echo "=== reqs dir ==="; ls -la bafta-scripted-comedy-portfolio || true
+          echo "=== workflows ==="; ls -la .github/workflows || true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -38,10 +35,15 @@ jobs:
           python-version: '3.11'
 
       - name: Install deps
-        run: python -m pip install --upgrade pip && pip install -r bafta-scripted-comedy-shows/requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r bafta-scripted-comedy-portfolio/requirements.txt
 
       - name: Run fetch script
         run: python scripts/get_raleigh_hr.py
+
+      - name: Show generated files
+        run: ls -la assets/data || true
 
       - name: Commit changes (if any)
         uses: stefanzweifel/git-auto-commit-action@v5
