--- a/.github/workflows/update-raleigh-hr.yml
+++ b/.github/workflows/update-raleigh-hr.yml
@@ -1,32 +1,10 @@
-name: Update Cal Raleigh HR Data
-
+name: Minimal Parse Check
 on:
   workflow_dispatch:
-
 jobs:
-  update:
+  test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - name: Check out repo
-        uses: actions/checkout@v4
+      - name: Echo
+        run: echo "YAML parsed OK"
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install deps
-        run: python -m pip install --upgrade pip && pip install -r bafta-scripted-comedy-portfolio/requirements.txt
-
-      - name: Run fetch script
-        run: python scripts/get_raleigh_hr.py
-
-      - name: Commit changes (if any)
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: 'chore(data): update Cal Raleigh HRs [auto]'
-          file_pattern: |
-            assets/data/raleigh_hr.json
-            assets/data/raleigh_hr.csv
