--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
-pybaseball>=2.2
-pandas>=2.0
-requests>=2.31
+name: Python Sanity
+on:
+  workflow_dispatch:
+jobs:
+  py:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r bafta-scripted-comedy-portfolio/requirements.txt
+      - name: Verify imports
+        run: python - << 'PY'
+import pandas, requests
+print("Imports OK")
+PY
