--- a/.github/workflows/update-raleigh-hr.yml
+++ b/.github/workflows/update-raleigh-hr.yml
@@ -1,10 +1,20 @@
-name: Minimal Parse Check
+name: Python Sanity
 on:
   workflow_dispatch:
 jobs:
-  test:
+  py:
     runs-on: ubuntu-latest
     steps:
-      - name: Echo
-        run: echo "YAML parsed OK"
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r bafta-scripted-comedy-portfolio/requirements.txt
+      - name: Verify imports
+        run: python - << 'PY'
+import pandas, requests
+print("Imports OK")
+PY
