--- a/.github/workflows/update-raleigh-hr.yml
+++ b/.github/workflows/update-raleigh-hr.yml
@@ -9,12 +9,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
       - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r bafta-scripted-comedy-portfolio/requirements.txt
+        run: pip install -r bafta-scripted-comedy-portfolio/requirements.txt
       - name: Verify imports
-        run: python - << 'PY'
-import pandas, requests
-print("Imports OK")
-PY
+        run: python -c "import pandas, requests; print('Imports OK')"
