--- a/.github/workflows/update-raleigh-hr.yml
+++ b/.github/workflows/update-raleigh-hr.yml
@@ -1,9 +1,15 @@
-name: Python Sanity
+name: Update Cal Raleigh HR Data
+
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '5 9 * * *'  # daily at 09:05 UTC
+
 jobs:
-  py:
+  update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -13,5 +19,13 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install deps
         run: pip install -r bafta-scripted-comedy-portfolio/requirements.txt
-      - name: Verify imports
-        run: python -c "import pandas, requests; print('Imports OK')"
+      - name: Run fetch script
+        run: python scripts/get_raleigh_hr.py
+      - name: Show generated files
+        run: ls -la assets/data || true
+      - name: Commit changes (if any)
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: 'chore(data): update Cal Raleigh HRs [auto]'
+          file_pattern: "assets/data/raleigh_hr.json assets/data/raleigh_hr.csv"
+
