--- a/.github/workflows/update-raleigh-hr.yml
+++ b/.github/workflows/update-raleigh-hr.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
       - name: Install deps
-        run: pip install -r bafta-scripted-comedy-portfolio/requirements.txt
+        run: pip install -r requirements.txt
       - name: Run fetch script
         run: python scripts/get_raleigh_hr.py
       - name: Show generated files
